Update theme, title, and description in config

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: minima
+theme: jekyll-theme-cayman
+title: "Anna Woods"
+description: "Information Systems Student | Help Desk Specialist"
+
+
