Change theme to jekyll-theme-slate
Updated theme and description for the site.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: "Anna Woods"
-description: "Information Systems Student | Help Desk Specialist"
+description: "Information Systems | Networking | Data Systems"
+
+
 
 
